prodMetadata/src/objects/Geo_Pref__c.object
<CustomObject>
    <description>stores user preferences for Geo Map application</description>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filter_ID__c</fullName>
        <label>Filter ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Index__c</fullName>
        <externalId>true</externalId>
        <label>Key Index</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>unique key for inserting unique records</description>
        <formula>OwnerId &amp;  Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <label>Geo Preference</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Default__c</columns>
        <columns>Filter_ID__c</columns>
        <columns>Key_Index__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Geo Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geo Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>